
9.09  2021-03-13
  - Fixed built-in templates to be a bit more responsive.

9.08  2021-03-12
  - Fixed a bug in Test::Mojo where Test::Mojo->new($app) would not work correctly.

9.07  2021-03-11
  - Improved config override feature to work for Mojolicious::Lite applications.
  - Improved Mojo::UserAgent performance slightly by not including unnecessary "Content-Length: 0" request headers.

9.03  2021-03-05
  - Fixed a bug in Mojo::Transaction::WebSocket where finish event handlers would not always get the same number of
    arguments passed.

9.02  2021-02-17
  - Fixed finally method in Mojo::Promise to deal correctly with promises returned by the handler.
  - Improved Mojo::Server::Daemon to include random ports in the "Web application available at ..." message.

9.01  2021-02-16
  - Added EXPERIMENTAL color attribute to Mojo::Log.
  - Added EXPERIMENTAL MOJO_LOG_COLOR environment variable to Mojo::Log.
  - Fixed Windows support of network_contains function in Mojo::Util. (jberger)

9.0  2021-02-14
  - Code name "Waffle", this is a major release.
  - Added support for deployment specific plugins.
  - Removed Mojo::IOLoop::Delay.
  - Removed hidden attribute from Mojolicious::Routes.
  - Removed hide and is_hidden methods from Mojolicious::Routes.
  - Removed deprecated success method from Mojo::Transaction.
  - Removed deprecated detour, over, route and via methods from Mojolicious::Routes::Route.
  - Removed deprecated local_address method from Mojo::UserAgent.
  - Removed deprecated tls_ciphers, tls_protocols, tls_verify and tls_version options from Mojo::IOLoop::TLS.
  - Removed deprecated local_address option from Mojo::IOLoop::Client.
  - Removed deprecated config stash value.
  - Changed Mojo::Log to join mutiple log messages with a whitespace instead of a newline.
  - Added is_reserved method to Mojolicious::Routes::Route.
  - Improved Mojolicious::Routes to disallow the use of reserved stash values, such as "/:action", in route patterns.