@@ -1,6 +1,8 @@
 
 9.09  2021-03-13
+  - Added comma_separated filter to Mojolicious::Validator.
   - Fixed built-in templates to be a bit more responsive.
+  - Fixed filter list handling in Mojolicious::Validator::Validation.
 
 9.08  2021-03-12
   - Fixed a bug in Test::Mojo where Test::Mojo->new($app) would not work correctly.
